# rust-project

client/: .gitignore  package-lock.json  package.json
client/src/: App.js
server/: Cargo.toml  db.sql  system_prompt.txt
server/src/: http_server.rs  lib.rs  main.rs  websocket_server.rs  ws_test.py
server/src/handlers/: chat.rs  cli.rs  handler.rs  mod.rs
server/src/state/: app_state.rs  mod.rs
